Still broken on FireBase. Added minor fixes.

--- a/src/app/sticky-header/sticky-header.component.scss
+++ b/src/app/sticky-header/sticky-header.component.scss
@@ -24,11 +24,6 @@ container {
   font-size: 1.3em;
 }
 
-.active {
-  background-color: #29b6f6;
-  color: white;
-}
-
 .menu-spacer {
   flex: 1 1 auto;
 }
